add unit tests and update build.gradle